@@ -16,6 +16,13 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Implement bug ownership, with new 'owner' and 'noowner' commands
       (closes: #133453).
 
+  * Adam Heath:
+    - Rewrite filtering in cgi's common.pl, to make it completely generic.
+      Filtering can now work against any field.
+    - Rewrite grouping logic in cgi's common.pl, to make it completely
+      generic.  There is now no longer 2 nested loops, to do the grouping.
+      This makes adding new grouping levels simpler for the future.
+
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
 debbugs (2.4.1) unstable; urgency=low
